--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -5,7 +5,7 @@ on:
     pull_request:
         branches: [dev]
 jobs:
-    cypress:
+    qa:
         runs-on: ubuntu-latest
         steps:
             - name: Checkout code
@@ -17,7 +17,7 @@ jobs:
             - name: Run JavaScript checks
               run: "npm run qa:js"
 
-            - name: Run Cypress tests
+            - name: Run Cypress tests (dev mode)
               uses: cypress-io/github-action@v2
               with:
                   record: false
