--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -7,7 +7,6 @@ on:
 jobs:
     qa:
         runs-on: ubuntu-latest
-        container: node:10.18-jessie
         services:
             redis:
                 image: redis
@@ -16,6 +15,8 @@ jobs:
                     --health-interval 10s
                     --health-timeout 5s
                     --health-retries 5
+                ports:
+                    - 6379:6379
         environment: staging
         steps:
             - name: Checkout code
