--- a/package.json
+++ b/package.json
@@ -9,25 +9,18 @@
         "grunt": "^1.4.1",
         "http-status": "^1.5.0",
         "ldapjs": "^2.3.1",
-        "lodash": "^4.17.21",
-        "mysql": "^2.18.1",
         "sails": "^1.4.4",
         "sails-hook-grunt": "^4.0.1",
-        "sails-hook-orm": "^2.1.1",
-        "sails-mongo": "^1.2.0",
-        "sails-mysql": "^1.0.2"
+        "sails-hook-orm": "^3.0.2",
+        "sails-mongo": "^2.0.0"
     },
     "devDependencies": {
         "@sailshq/eslint": "^4.19.3",
-        "cheerio": "^1.0.0-rc.10",
-        "cypress": "^7.4.0",
+        "cypress": "^8.2.0",
         "eslint": "^7.32.0",
-        "htmlhint": "^0.11.0",
-        "mocha": "^9.0.3",
-        "mocha-lcov-reporter": "^1.3.0",
+        "htmlhint": "^0.15.1",
         "nyc": "^15.1.0",
-        "should": "^13.2.3",
-        "supertest-session": "^4.1.0"
+        "should": "^13.2.3"
     },
     "scripts": {
         "start": "NODE_ENV=production node app.js",
